Added spring boot initialisation where Spring Data JPA is now feasible

--- a/performance-monitor/pom.xml
+++ b/performance-monitor/pom.xml
@@ -12,10 +12,14 @@
     <artifactId>performance-monitor</artifactId>
     <dependencies>
         <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+            <version>1.4.199</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
     </dependencies>
-
-
 </project>
